--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,35 @@ services:
     - .:/go/src/github.com/kaznishi/blog_tutorial_golang
     ports:
     - 8080:8080
+  mysql:
+    build:
+      context: .
+      dockerfile: docker/mysql/Dockerfile
+    ports:
+    - 13306:3306
+    environment:
+    - MYSQL_ROOT_PASSWORD=admpass
+    - MYSQL_DATABASE=defaultdb
+    - MYSQL_USER=defaultuser
+    - MYSQL_PASSWORD=defaultpass
+    volumes:
+    - db-volume:/var/lib/mysql
+    - log-volume:/var/log/mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+    - PMA_ARBITRARY=1
+    - PMA_HOST=mysql
+    - PMA_USER=root
+    - PMA_PASSWORD=admpass
+    depends_on:
+    - mysql
+    ports:
+    - 8900:80
+    volumes:
+    - session-volume:/sessions
+
+volumes:
+  db-volume:
+  session-volume:
+  log-volume:
